@@ -18,14 +18,14 @@ public final class UnidentifiedItem extends OverpoweredItem {
   public final EquipmentType equipment_type;
 
   public UnidentifiedItem(final int ring_id){
-    super(Names.UNIDENTIFIED_RING[ring_id], CreativeTabs.tools_creative_tab);
+    super(Names.UNIDENTIFIED_RING[ring_id], CreativeTabs.creative_tab);
     this.ring_id = ring_id;
     armor_material = null;
     equipment_type = null;
   }
 
   public UnidentifiedItem(@Nonnull final ArmorMaterial material, @Nonnull final EquipmentType type){
-    super(new ResourceLocation(OverpoweredTechnology.MOD_ID, "unidentified_"+material.name+"_"+type.name), CreativeTabs.tools_creative_tab);
+    super(new ResourceLocation(OverpoweredTechnology.MOD_ID, "unidentified_"+material.name+"_"+type.name), CreativeTabs.creative_tab);
     this.ring_id = -1;
     this.armor_material = material;
     this.equipment_type = type;
