@@ -11,7 +11,7 @@ import net.minecraft.item.SwordItem;
 public class NullSword extends SwordItem {
 
   public NullSword(){
-    super(OverpoweredTiers.VOID, ToolConstants.sword_damage, ToolConstants.sword_speed, new Item.Properties().group(CreativeTabs.tools_creative_tab));
+    super(OverpoweredTiers.VOID, ToolConstants.sword_damage, ToolConstants.sword_speed, new Item.Properties().group(CreativeTabs.creative_tab));
     setRegistryName(Names.VOID_SWORD);
   }
 
